<resources>
    <string name="app_name">Codelabs.DroidCafe</string>
    <string name="action_settings">Settings</string>
    <string name="content_main_text">Droid Desserts</string>
    <string name="description_donuts">Donuts are glazed and sprinkled with candy</string>
    <string name="description_ice_cream">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="description_froyo">FroYo is premium self-serve frozen yogurt</string>

    <string name="donut_order_message">You ordered a donut</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich</string>
    <string name="froyo_order_message">You ordered a Froyo</string>
    <string name="order_text">Order</string>
    <string name="name_text">Name</string>
    <string name="name_edit_hint">Enter a name</string>
    <string name="address_text">Address</string>
    <string name="address_hint">Enter an address</string>
    <string name="phone_text">Phone</string>
    <string name="phone_edit_hint">Enter a phone</string>
    <string name="note_text">Note</string>
    <string name="note_edit_hint">Enter a note</string>
    <string name="delivery_text">Choose a delivery method:</string>
    <string name="radio_same_day">Same day</string>
    <string name="radio_next_day">Next day</string>
    <string name="radio_pick_up">Pick up</string>
    <string name="menu_main_contact">Contact</string>
    <string name="menu_main_order">Order</string>
    <string name="menu_main_status">Status</string>
    <string name="menu_main_favorites">Favorites</string>


    <string name="menu_order_message">You selected Order</string>
    <string name="menu_status_message">You selected Status</string>
    <string name="menu_favorites_message">You selected Favorites</string>
    <string name="menu_contact_message">You selected Contact</string>
    <string name="title_activity_order">Order Activity</string>


    <string-array name="label_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
